Remove static folder and replace with variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,13 @@ PROJECT(tmaster)
 SET(RUNTIME_OUTPUT_DIRECTORY, ${CMAKE_CURRENT_BINARY_DIR})
 
 
-SET(FLTK_DIR "C:/Users/i028161/Tools/fltk")
+SET(FLTK_DIR "${HOME}/Tools/fltk")
 SET(FLTK_INCLUDE_DIR "${FLTK_DIR}/include")
 SET(FLTK_LIBRARIES "${FLTK_DIR}/lib")
 SET(FLTK_FLUID_EXECUTABLE "${FLTK_DIR}/bin/fluid.exe")
 INCLUDE_DIRECTORIES("${FLTK_INCLUDE_DIR}")
 
-SET(BOOST_ROOT "C:/Users/i028161/Tools/boost")
+SET(BOOST_ROOT "${HOME}/Tools/boost")
 MESSAGE(STATUS "** Search Boost root: ${BOOST_ROOT}")
 
 FIND_PACKAGE(Boost REQUIRED)
